[package]
name = "kasada"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
hex = "0.4.3"
lazy_static = "1.5.0"
once_cell = "1.19.0"
rand = "0.8.5"
regex = "1.11.0"
serde_json = "1.0.128"
sha2 = "0.10.8"
swc_common = "0.40.2"
rustc-hash = "2.0.0"
oxc_ast = "0.32.0"
oxc_span = "0.32.0"
oxc_semantic = "0.32.0"
oxc_allocator = "0.32.0"
oxc_parser = "0.32.0"
oxc_syntax = "0.32.0"
